--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2018"
 [dependencies]
 lazy_static = "1.4.0"
 regex = "1.3.9"
+serde = {version = "1.0.114", features = ["derive"]}
+serde_json = "1.0.56"
 simple-error = "0.2.1"
 structopt = "0.3.15"
