--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chomp = "0.3.1"
 handlebars = "3.4.0"
 lazy_static = "1.4.0"
 regex = "1.3.9"
